--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ repository               : "ajcambron/georginaramsay"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.jpeg"
+  avatar           : "GRamsayHeadshot2026-300x300.jpeg"
   name             : "Georgina Ramsay"
   pronouns         : "she/her"  
   bio              : "Associate Professor of Anthropology"
